# atuin-server

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml  release.yml
src/: error.rs  server.rs
