[package]
name = "atuin-server"
edition = "2024"
description = "Atuin sync server - Salvo + SQLite implementation"
version = "18.13.6"
license = "MIT"
readme = "README.md"
rust-version = "1.94.0"
homepage = "https://github.com/atuinsh/atuin"
repository = "https://github.com/atuinsh/atuin"
keywords = ["atuin", "sync", "server"]
categories = ["command-line-utilities", "web-programming"]

[workspace]

[dependencies]
# Web framework
salvo = "0.93"

# atuin-crates - reuse official implementation from crates.io
atuin-server-database = "18"
atuin-server-sqlite = "18"
atuin-common = "18"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
time = { version = "0.3", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4.6", features = ["derive"] }

# Configuration
config = "0.15"
toml = "1.1.2+spec-1.1.0"

# State management
once_cell = "1"

# Authentication
argon2 = "0.5"


# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Version parsing
semver = "1"

# HTTP types
http = "1"

# HTTP client for webhooks (using rustls to avoid OpenSSL cross-compilation issues)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[features]
default = []

[dev-dependencies]
tempfile = "3"
